# stack-sandbox-chain-test

./: test.sh
app/: app.cabal  stack.yaml
lib1/: stack.yaml
lib2/: lib2.cabal  stack.yaml
