name:                app
version:             1.0.0.0
author:              Daniel Vigovszky
maintainer:          daniel.vigovszky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  hs-source-dirs:      src/main/haskell
  build-depends:       base
                     , lib1 ==0.1.*
                     , lib2 ==0.3
  default-language:    Haskell2010

test-suite pdom-coedit-protocol-test
  type:                exitcode-stdio-1.0
  build-depends:       base
  hs-source-dirs:      src/test/haskell
  main-is:             Test.hs
  default-language:    Haskell2010
